# Boundary-Segmentation-Transformer

./: main.py  pyproject.toml  train.py
local_datasets/: __init__.py  utils.py
local_datasets/action100m/: helpers.py
models/: models.py
models/configs/: __init__.py  create_config.py
