[project]
name = "attseg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.18.0",
    "numpy>=2.4.6",
    "pytorch-optimizer>=3.10.1",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchcodec>=0.14.0",
    "yt-dlp>=2026.6.9",
]
